[project]
name = "graphrl"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Uhrich",email = "robin.uhrich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "igraph (>=0.11.8,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
